_sass/minima/_layout.scss
/**
 * Reusable classes
 */
.pb-2 {
  padding-bottom: $spacing-unit/2;

  th {
    padding-bottom: $spacing-unit/2;
  }
}

.pb-3 {
  padding-bottom: $spacing-unit;
}

.mb-2 {
  margin-bottom: $spacing-unit/2;
}

.mb-3 {
  margin-bottom: $spacing-unit;
}

.no-mb {
  margin-bottom: 0 !important;
}

.float-right {
  float: right;
  @include media-query($on-palm) {
    float: none;
  }
}

.text-small {
  font-size: 14px;
}

.text-left {
  text-align: left;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.text-red {
  color: $brand-color;
}

.text-caps {
  text-transform: uppercase;
}

.simple-list {
  margin-left: 0;

  li {
    list-style: none;
  }
}

@keyframes rotating {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


/**
 * Site header
 */
.site-header {
  padding: $spacing-unit 0 $spacing-unit 0;
  text-align: center;

  .wrapper {
    max-width: 100%;
    @include media-query($on-palm) {
      margin-bottom: 0;
    }
  }

  .grid {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    grid-gap: $spacing-unit;

    @include media-query($on-palm) {
      grid-template-columns: 1fr;
      grid-gap: 0;
    }
  }

  h1 {
    margin-bottom: 0;
    text-transform: none;
    font-size: 24px;

    @include media-query($on-palm) {
      margin-bottom: $spacing-unit/2;
    }

    @include media-query($on-small) {
      font-size: 16px;
    }
  }

  .text-right {
    @include media-query($on-palm) {
      text-align: center;
    }
  }
}

.logo,
.logo-link {
  max-width: 280px;
  display: block;
  margin: 0 auto $spacing-unit/2 auto;

  @include media-query($on-small) {
    max-width: 200px
  }
}

.social-icon-link {
  display: inline-block;
  width: 42px;
  height: 42px;
  border-radius: 50%;
  padding: 5px;
  background: $brand-color;
  margin-right: 2px;
  margin-bottom: 0;

  .social-icon-bg {
    fill: $white;
  }

  &:hover,
  &:focus,
  &:active {
    background: $black;
  }

  @include media-query($on-palm) {
    display: none;
  }
}

a.btn,
button {
  display: inline-block;
  line-height: 1;
  color: $white !important;
  background: $brand-color;
  padding: $spacing-unit/2 $spacing-unit;
  text-align: center;

  &:hover,
  &:focus,
  &:active {
    background: $black;
    color: $white;
    text-decoration: none;
  }
}

.banner-img {
  background: url(mexico.jpg) no-repeat center center;
  background-size: cover;
  overflow: hidden;
  height: 0;
  padding-top: calc(9/21 * 100%);

  @include media-query($on-palm) {
    background: url(mexico-sm.jpg) no-repeat center center;
    background-size: cover;
    padding-top: calc(3/4 * 100%);
  }
} 

/**
 * Home page
 */
.grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: $spacing-unit*2;

  @include media-query($on-palm) {
    grid-template-columns: 1fr;
    grid-gap: 0;
  }
}

h1, h2, h3 {
  text-transform: uppercase;
}

.menu {
  h2 {
    margin-bottom: 0;
  }
}

.menu--description {
  color: $brand-color;
  font-size: 14px;
  margin-bottom: $spacing-unit/3;

  a {
    color: $brand-color;
    border-bottom: 1px solid $brand-color;

    &:visited {
      color: $brand-color;
    }

    &:hover {
      color: $brand-color;
    }
  }
}

table.menu--items {
  width: 100%;
  table-layout: fixed;
  margin-bottom: $spacing-unit;

  tr {
    vertical-align: top;
    p {
      font-size: 12px;
      line-height: 1.1;
      margin-bottom: $spacing-unit/3;

      a {
        border-bottom: 1px solid $black;
      }
    }
  }

  th {
    font-weight: normal;
    text-align: left;
  }

  td {
    text-align: right;
  }

  thead {
    th {
      font-size: $base-font-size*1.5;
    }
  }
}

.menu--priceless {
  td {
    display: none;
  }
}

.social {
  background: $black;
  padding: $spacing-unit*2 0;
  text-align: center;
  color: $white;

  a {
    color: $brand-color;
    border-bottom: 1px solid $brand-color;

    &:visited {
      color: $brand-color;
    }

    &:hover {
      color: $brand-color;
    }
  }

  h3 {
    text-transform: none;
    margin-bottom: 0;
  }

  @include media-query($on-small) {
    padding: $spacing-unit 0;
  }
}

#instafeed {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: $spacing-unit;
  margin-bottom: $spacing-unit;

  a {
    border-bottom: none;
  }

  @include media-query($on-palm) {
    grid-template-columns: 1fr;
  }

  .insta-img {
    background-size: cover;
    overflow: hidden;
    height: 0;
    padding-top: 100%;
  }
}

.hours {
  padding-top: $spacing-unit*2;
  padding-bottom: $spacing-unit*2;

  h3 {
    margin-bottom: 0;
  }

  @include media-query($on-small) {
    padding-top: $spacing-unit;
    padding-bottom: $spacing-unit;
  }
}

.about {
  background: $brand-color;
  padding: $spacing-unit*2 0;
  color: $white;

  h1 {
    margin-bottom: $spacing-unit;
  }

  p {
    font-size: $base-font-size*1.2;
    margin-bottom: $spacing-unit*1.5;

    @include media-query($on-small) {
      font-size: $base-font-size;
      margin-bottom: $spacing-unit;
    }
  }

  @include media-query($on-small) {
    padding-top: $spacing-unit;
    padding-bottom: $spacing-unit;
    margin-bottom: $spacing-unit;
  }
}

.party {
  background: url(bar.jpg) no-repeat center center;
  background-size: cover;
  // overflow: hidden;
  // height: 0;
  // padding-top: calc(9/21 * 100%);
  display: flex;
  justify-content: center;
  align-items: center;
  color: $white;
  text-align: center;
}

.party-content {
  padding: $spacing-unit*7.5 $spacing-unit;
}

/**
 * Reservations page
 */
.lead {
  font-size: 21px;
  max-width: 650px;
  margin-right: auto;
  margin-left: auto;

  @include media-query($on-palm) {
    font-size: $base-font-size;
  }
}

body.post {
  .banner-img {
    display: none;
    background: url(bar.jpg) no-repeat center center;

    @include media-query($on-palm) {
      background: url(bar-sm.jpg) no-repeat center center;
    }
  }

  .wrapper-sm {
    display: block;
    max-width: 300px;
    margin-right: auto;
    margin-left: auto;
  }
}

.booking-list {
  li {
    margin-bottom: $spacing-unit/3;
  }
}

.booking-options {
  h3 {
    margin-bottom: 5px;
  }
}

.form-area {
  background: $brand-color;
  color: $white;
  padding: $spacing-unit $spacing-unit $spacing-unit*1.5;

  @include media-query($on-palm) {
    margin-top: $spacing-unit*2;
    padding: $spacing-unit/2 $spacing-unit/2 $spacing-unit;
  }
}

.notification {
  display: none;
  background: $black;
  padding: $spacing-unit/2;
  color: $white;
  text-align: center;
  transition: 300ms ease-in-out;
  border-radius: 2em;
}

.notification-error {
  background: red;
}

input,
select,
textarea {
  box-sizing : border-box;
  background-color: #fff;
  border-color: #fff;
  border-radius: 3px;
  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
  border-width: 1px;
  border-style: solid;
  color: $black;
  font-size: $base-font-size;
  font-weight: 400;
  padding: $spacing-unit/3;
  width: 100%;
  margin-bottom: $spacing-unit/2;
}

label {
  display: block;
  margin-bottom: $spacing-unit/4;
}

button {
    border: none;
    margin: 0;
    padding: $spacing-unit/2 $spacing-unit;
    width: auto;
    overflow: visible;
    text-align: inherit;
    outline: none;

    background: $black;

    /* inherit font & color from ancestor */
    color: inherit;
    font: inherit;

    /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
    line-height: normal;

    /* Corrects font smoothing for webkit */
    -webkit-font-smoothing: inherit;
    -moz-osx-font-smoothing: inherit;

    /* Corrects inability to style clickable `input` types in iOS */
    -webkit-appearance: none;

    /* Remove excess padding and border in Firefox 4+ */
    &::-moz-focus-inner {
        border: 0;
        padding: 0;
    }

    &:hover {
      cursor: pointer;
    }
}

/**
 * Site footer
 */
 .site-footer {
  padding: $spacing-unit 0;
  text-align: center;
 }

.footer-icon {
  position: relative;
  width: 150px;
  height: 150px;
  border-radius: 50%;
  margin: 0 auto $spacing-unit*2 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  background: $brand-color;

  &:before {
    content: "";
    position: absolute;
    width: 150px;
    height: 150px;
    top: 0;
    left: 0;
    background: url(icon-piece.svg) no-repeat center center;
    animation: rotating 6s linear infinite;
  }
}

.monogram {
  color: $white;
  font-size: $base-font-size*2;
}

